# SmartButler

./: README.md
DIM_server/: BUILD.gn
DIM_server/colorful_light_demo/: BUILD.gn  colorful_light_demo.c
DIM_server/demo_udpserver/: demo_entry_cmsis.c  net_demo.h  net_params.h  udp_server_test.c  wifi_connecter.c
DIM_server/lib/: cloud_huawei_iotda_example.h  shared.h
DIM_server/photo_demo/: BUILD.gn  photo_demo.c
DIM_server/ssd1306/: BUILD.gn  ssd1306.h  ssd1306_demo.c
Door_server/: BUILD.gn
Door_server/demo_udpserver/: BUILD.gn  udp_server_test.c  wifi_connecter.c
Door_server/door/: BUILD.gn  ascii_char.h  entry.c  pca9685.c  pca9685.h
Door_server/lib/: cloud_huawei_iotda_example.h  shared.h
Door_server/ssd1306/: ssd1306_demo.c
RGB_server/: BUILD.gn
RGB_server/demo_udpserver/: BUILD.gn  udp_server_test.c  wifi_connecter.c
RGB_server/lib/: cloud_huawei_iotda_example.h  shared.h
RGB_server/revolving_lantern/: BUILD.gn  revolving_lantern.c
RGB_server/ssd1306/: ssd1306_demo.c
client/: BUILD.gn
client/aht20/: BUILD.gn  aht20.c  aht20_test.c
client/demo_udpclient/: BUILD.gn  demo_entry_cmsis.c  udp_client_test.c  wifi_connecter.c
client/hx1838_app/: BUILD.gn  entry.c  hx1838.c
client/lib/: cloud_huawei_iotda_example.h  shared.h
client/ssd1306/: ssd1306_demo.c
