#Copyright (C) 2021 HiHope Open Source Organization .
#Licensed under the Apache License, Version 2.0 (the "License");
#you may not use this file except in compliance with the License.
#You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
#Unless required by applicable law or agreed to in writing, software
#distributed under the License is distributed on an "AS IS" BASIS,
#WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#See the License for the specific language governing permissions and
#
#limitations under the License.

static_library("demo_udpserver") {
    # uncomment one of following line, to enable one test:
    sources = [
        "udp_server_test.c",
        
        "//base/iot_hardware/bsp/src/hal_bsp_mqtt.c",
        "//base/iot_hardware/bsp/src/hal_bsp_sht20.c",
        "//base/iot_hardware/bsp/src/hal_bsp_ap3216c.c",
        "//base/iot_hardware/bsp/src/hal_bsp_aw2013.c",
        "//base/iot_hardware/bsp/src/hal_bsp_ssd1306.c"
    ]

    sources += ["demo_entry_cmsis.c", "wifi_connecter.c"]
    include_dirs = [
        "//utils/native/lite/include",
        "//kernel/liteos_m/components/cmsis/2.0",
        "//base/iot_hardware/interfaces/kits/wifiiot_lite",
        "//base/iot_hardware/peripheral/interfaces/kits",
        "//foundation/communication/wifi_lite/interfaces/wifiservice",

        "//vendor/hisi/hi3861/hi3861/third_party/lwip_sack/include",
        "//kernel/liteos_m/kal/cmsis",
        "//base/iot_hardware/bsp/include",
        "//foundation/communication/interfaces/kits/wifi_lite/wifiservice",
        "//third_party/pahomqtt/MQTTPacket/src",
        "//third_party/pahomqtt/MQTTClient-C/src",
        "//third_party/pahomqtt/MQTTClient-C/src/liteOS",
        "//third_party/cJSON"
    ]

    deps = [
        "//third_party/pahomqtt:pahomqtt_static",
    ]
}